<resources>
    <string name="app_name">To-do</string>
    <string name="action_settings">Settings</string>


    <string name="main_activity_name">All Tasks</string>
    <string name="add_task_activity_name">Add a New Task</string>

    <!-- Strings for MainActivity -->
    <string name="priority_1">1</string>
    <string name="priority_2">2</string>
    <string name="priority_3">3</string>

    <!-- Strings for AddTaskActivity -->
    <!-- This etaskEntrytask has a unicode character for "..." = "&#8230;" -->
    <string name="edit_task_description">To-do Description</string>
    <string name="priority_string">Priority</string>

    <string name="high_priority">High</string>
    <string name="med_priority">Medium</string>
    <string name="low_priority">Low</string>

    <string name="add_button">Add new task</string>
    <string name="update_button">Update</string>
    <string name="todo_title">To-do Title</string>
    <string name="todo">TO-DO APPLICATION</string>
    <string name="date_time">Date Time</string>
    <string name="entertime">To-do Time</string>


</resources>
