<?xml version="1.0" encoding="utf-8"?><!--
    This vertical linear layout contains all the views in the AddTaskActivity code.
    This includes an EditText to adtaskEntrytask description, and buttons to select a priority
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_gravity="center|start"
        android:padding="10dp"
        android:layout_marginBottom="8dp"
        android:background="#8ED9FC"
        android:text="@string/todo"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/todo_title"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:textColorLink="#00D63333" />

    <!-- EditText for getttaskEntrytask description input -->
    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/edit_task_description"
        android:paddingBottom="@dimen/activity_horizontal_margin" />

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/date_time"
        android:textColor="@android:color/primary_text_light" />

    <!-- TextView and FrameLayout (which contains buttons) for Priority Selection -->
    <EditText
        android:id="@+id/todo_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Todo Date"
        android:focusable="false"
        android:text="" />

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="To-do Time"
        android:textColor="@android:color/primary_text_light" />

    <EditText
        android:id="@+id/todo_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/entertime"
        android:focusable="false"
        android:text="" />

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/priority_string"
        android:textColor="@android:color/primary_text_light" />

    <!-- RadioGroup for visible selection of a priority -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:weightSum="3">

        <RadioButton
            android:layout_margin="5dp"
            android:id="@+id/radButton1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#D56464"
            android:checked="true"
            android:text="@string/high_priority"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:layout_margin="5dp"
            android:id="@+id/radButton2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#DAD4C6"
            android:text="@string/med_priority"
            android:theme="@style/WhiteRadioButton" />

        <RadioButton
            android:layout_margin="5dp"
            android:id="@+id/radButton3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#03A9F4"
            android:text="@string/low_priority"
            android:theme="@style/WhiteRadioButton" />

    </RadioGroup>

    <!-- Add button -->
    <Button

        android:id="@+id/saveButton"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/select_xmlbutton"
        android:text="@string/add_button"
        android:textColor="@android:color/primary_text_dark" />

</LinearLayout>